# Siphon

./: CMakeLists.txt  LICENSE  README.md
cmd/: cli.c  siphon.c
include/: gc_disc.h  gc_dol.h  gc_yaml.h  macros.h  siphon.h
src/: siphon.c
src/disc/: gc_ciso.c  gc_disc.c  gc_disc_fst.c  gc_disc_internal.h  gc_dol_split.c  gc_dol_split.h  gc_gcz.c  gc_iso.c  gc_rarc.c  gc_rvz.c  gc_rvz.h  gc_wbfs.c  gc_wia.c
src/dol/: gc_dol.c  gc_json.c  gc_json.h  gc_symbols.c  gc_symbols.h  gc_yaz0.c  gc_yaz0.h
src/util/: siphon_log.c  siphon_log.h
src/yaml/: gc_yaml.c
test/: test_rarc.c  test_yaml.c
test/fixtures/: anchors.yml  basic.yml  block.yml  flow.yml  minimal.arc  quoted.yml
